添加aigc、增添project里图片删除功能
